# clematis

./: README.md  setup.cfg
networks/: bottleneck.graphml  example.graphml
src/clematis/: __init__.py  __main__.py  system.py
