[metadata]
name = clematis
version = 0.0.1
author = Filipe Verri
author_email = filipeverri@gmail.com
description = clematis: manufacturing systems simulation using complex networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dnaya-org.github.io/clematis
project_urls =
    Bug Tracker = https://github.com/dnaya-org/clematis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas>1.3
    numpy>1.17
    python-igraph>0.9

[options.packages.find]
where = src
